fix: CreateNote add button alignment

--- a/src/components/CreateNote.css
+++ b/src/components/CreateNote.css
@@ -48,6 +48,8 @@
   bottom: -2rem;
   transition: transform 100ms ease;
   cursor: pointer;
+  display: grid;
+  place-content: center;
 }
 
 .create-note__btn:hover {
